tests/Fixtures/Torture/Good/interp.g
// EXPECT OK
import LibGata;
kernel { entry func Main() {
  let int n = 7;
  Console.PrintLine($"value is {n}");
} }
