tests/Fixtures/Torture/Bad/continue_outside.g
// EXPECT G022
kernel { entry func Main() { continue; } }
